--- a/src/components/Constant/css/ThePlayingList.scss
+++ b/src/components/Constant/css/ThePlayingList.scss
@@ -1,18 +1,27 @@
 @import "../../../myStyle.scss";
+
+.drawer-btn:hover {
+  cursor: pointer;
+}
+
 .songListSettings {
   @include flexBoxRow();
   justify-content: space-between;
 }
+
 .singleSong {
   @include flexCenter();
   padding-top: 10px;
   padding-bottom: 10px;
+
   &:nth-of-type(2n) {
     background-color: rgb(241, 238, 238);
   }
+
   &:hover {
     background-color: rgb(187, 187, 187);
   }
+
   p {
     margin: 0;
     padding: 0;
@@ -20,5 +29,5 @@
     font-size: 10px;
     font-weight: 400;
   }
-  
+
 }
