音乐播放进度条点击后时间更改不准确bug修复

--- a/src/components/Constant/css/TheMusicPlayer.scss
+++ b/src/components/Constant/css/TheMusicPlayer.scss
@@ -14,6 +14,10 @@
     margin: 0 auto 8px;
     border-radius: 5px;
     background: $processBcg;
+
+    &:hover {
+      cursor: pointer;
+    }
   }
 
   .progressbar {
