--- a/src/components/common/_colors.scss
+++ b/src/components/common/_colors.scss
@@ -28,4 +28,9 @@ $navBtnHoverColor: #fbd5d5;
 // TheMusicPlayer
 $processBcg: #fbdcdf;
 $processBarColor: #ffb6b6;
-$progressTimeColor: #666
+$progressTimeColor: #666;
+
+//FaceShow
+//FaceCamera
+$cameraBoxColor: #ffffd2;
+$photoBcg: #fafafa;
