--- a/src/components/common/_index.scss
+++ b/src/components/common/_index.scss
@@ -7,7 +7,7 @@
 html, body, #root, .App {
   width: 100%;
   min-width: 1200px;
-  height: 100%;
+  min-height: 100vh;
   padding: 0;
   margin: 0;
 }
