--- a/src/pages/HomePage/MainHomePage.scss
+++ b/src/pages/HomePage/MainHomePage.scss
@@ -4,7 +4,7 @@
 #all {
   @include flexCenter();
   flex-direction: column;
-  height: 100%;
+  min-height: 100vh;
 
   #header {
     @include flexCenter();
