--- a/src/components/FaceShow/FaceShow.scss
+++ b/src/components/FaceShow/FaceShow.scss
@@ -1,6 +1,5 @@
 .faceShowMain{
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
+    .cameraBlock {
+        margin-bottom: 20px;
+    }
 }
