歌词页面样式

--- a/src/components/common/_colors.scss
+++ b/src/components/common/_colors.scss
@@ -29,6 +29,8 @@ $navBtnHoverColor: #fbd5d5;
 $processBcg: #fbdcdf;
 $processBarColor: #ffb6b6;
 $progressTimeColor: #666;
+// MusicDetail
+$MusicDetailBcg: #fef0ff;
 
 //FaceShow
 //FaceCamera
