--- a/src/pages/MusicPage/MusicDetailPage.scss
+++ b/src/pages/MusicPage/MusicDetailPage.scss
@@ -1,49 +1,40 @@
+@import "../../components/common/colors";
 @import "../../myStyle.scss";
 
-.musicmain {
+.music-detail-main {
   @include flexBoxRow();
-  justify-content: center;
-  align-items: center;
+  position: relative;
+  justify-content: space-between;
+  align-items: flex-start;
+  width: 760px;
+  height: 420px;
+  background: $MusicDetailBcg;
+  border-radius: 10px;
+  padding: 20px;
+  margin: auto;
 
-  .sider {
-    @include flexBoxCol();
-    width: 25%;
-    align-items: center;
+  .song-cover {
+    width: 250px;
   }
-  .main {
-    width: 50%;
-    @include flexBoxCol();
-    .songdetail {
-      height: 400px;
 
-      @media screen and (min-width: 725px) {
-        @include flexBoxRow();
-        justify-content: center;
-      }
-      .songCover {
-        width: 270px;
-        margin-right: 20px;
-        @include flexCenter();
-        img {
-          height: 250px;
-          width: 250px;
-        }
-      }
-      .songLyrics {
-        min-width: 400px;
-        max-width: 500px;
-        overflow: hidden;
-      }
-    }
-    .commitblock {
-      @include flexBoxRow();
-      .commit {
-        width: 70%;
-      }
-      .recommand {
-        width: 30%;
-        height: 50vh;
-      }
+  .songLyrics {
+    width: 400px;
+    height: 100%;
+    overflow: hidden;
+  }
+
+  .close-btn {
+    position: absolute;
+    top: 5px;
+    right: 10px;
+    padding: 1em;
+    font-weight: bold;
+    line-height: 1;
+    transition: all 0.3s;
+
+    &:hover {
+      cursor: pointer;
+      transform: rotate(-360deg);
     }
   }
 }
