--- a/src/components/Music/MusicLyrics.scss
+++ b/src/components/Music/MusicLyrics.scss
@@ -4,17 +4,30 @@
     .songTitle{
         height: 10%;
         width: 600px;
+        margin-left:8vw;
         p:nth-of-type(1){
             padding: 0;
             font-size: 20px;
             font-weight:800;
         }
         p:nth-of-type(2){
-            font-size: 10px;
+            font-size: 15px;
             color: gray;
         }
     }
     .mainLyrics{
+        position:relative;
+        .mask{
+            height:40px;
+            width:90%;
+             background-image: linear-gradient(to top, rgba(200,200,200,0), rgba(235,235,235,0.8) );
+             
+            //background:rgba(0,0,0,.5);
+           // filter: blur(20px);
+            //opacity:0.8;
+            position: absolute;;
+            border-radius: 5px;
+          }
         p{
             color: rgb(90, 90, 90);
             font-size: 18px;
