--- a/src/pages/MusicPage/MusicDetailPage.scss
+++ b/src/pages/MusicPage/MusicDetailPage.scss
@@ -23,6 +23,13 @@
     overflow: hidden;
   }
 
+  .replace {
+    width: 100%;
+    font-size: 16px;
+    text-align: center;
+    line-height: 380px;
+  }
+
   .close-btn {
     position: absolute;
     top: 5px;
