--- a/src/components/Constant/css/ThePlayingList.scss
+++ b/src/components/Constant/css/ThePlayingList.scss
@@ -7,19 +7,31 @@
 .songListSettings {
   @include flexBoxRow();
   justify-content: space-between;
+  height: 32px;
+  line-height: 32px;
+  margin-bottom: 10px;
+
+  p {
+    margin: 0;
+  }
 }
 
 .singleSong {
   @include flexCenter();
-  padding-top: 10px;
-  padding-bottom: 10px;
+  padding: 10px;
 
   &:nth-of-type(2n) {
     background-color: rgb(241, 238, 238);
   }
 
+  &:last-child {
+    padding-bottom: 20px;
+    border-bottom: 1px solid #f0f0f0;
+  }
+
   &:hover {
     background-color: rgb(187, 187, 187);
+    cursor: pointer;
   }
 
   p {
@@ -27,7 +39,5 @@
     padding: 0;
     width: 33%;
     font-size: 10px;
-    font-weight: 400;
   }
-
 }
