--- a/src/components/common/_colors.scss
+++ b/src/components/common/_colors.scss
@@ -36,5 +36,6 @@ $MusicDetailBcg: #fef0ff;
 //FaceCamera
 $cameraBoxColor: #ffffd2;
 $photoBcg: #fafafa;
+$uploadBtnBcg: #f6f6f6;
 //FaceShowDetail
 $detailBoxBcg: #e1f2fb;
