--- a/src/pages/WelcomePage/WelcomePage.scss
+++ b/src/pages/WelcomePage/WelcomePage.scss
@@ -7,7 +7,8 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  height: 100%;
+  height: 100vh;
+  min-height: 600px;
   text-align: center;
 
   .title-container {
