--- a/src/components/common/_colors.scss
+++ b/src/components/common/_colors.scss
@@ -20,7 +20,9 @@
 
 $titleContainerColor: rgba(227, 253, 253, 0.8);
 $welcomeBtnColor: rgba(252, 254, 254, 0.85);
-$cardBcgColor: rgba(253, 226, 226, 0.8);
+@mixin cardBcg() {
+  background-color: rgba(253, 226, 226, 0.8);
+}
 
 // MainHomePage
 @mixin headerBcg() {
@@ -37,15 +39,21 @@ $processBcg: #fbdcdf;
 $processBarColor: #ffb6b6;
 $progressTimeColor: #666;
 // MusicDetail
-$MusicDetailBcg: #fef0ff;
+@mixin musicDetailBcg() {
+  background-color: #fef0ff;
+}
 
 // FaceShow
 // FaceCamera
-$cameraBoxColor: #ffffd2;
+@mixin cameraBoxBcg() {
+  background-color: #ffffd2;
+}
 $photoBcg: #fafafa;
 $uploadBtnBcg: #f6f6f6;
 // FaceShowDetail
-$detailBoxBcg: #e1f2fb;
+@mixin detailBoxBcg() {
+  background-color: #e1f2fb;
+}
 */
 
 /*
@@ -70,7 +78,9 @@ $detailBoxBcg: #e1f2fb;
 
 $titleContainerColor: #fff;
 $welcomeBtnColor: #fafafa;
-$cardBcgColor: #eaffd0;
+@mixin cardBcg() {
+  background-color: #eaffd0;
+}
 
 // MainHomePage
 @mixin headerBcg() {
@@ -87,29 +97,27 @@ $processBcg: #f5f4e8;
 $processBarColor: #ffb6b6;
 $progressTimeColor: #666;
 // MusicDetail
-$MusicDetailBcg: #fef0ff;
+@mixin musicDetailBcg() {
+  background-color: #fef0ff;
+}
 
 // FaceShow
 // FaceCamera
-$cameraBoxColor: #CAF2FF;
+@mixin cameraBoxBcg() {
+  background-color: #CAF2FF;
+}
 $photoBcg: #fafafa;
 $uploadBtnBcg: #f6f6f6;
 // FaceShowDetail
-$detailBoxBcg: #CAF2FF;
+@mixin detailBoxBcg() {
+  background-color: #CAF2FF;
+}
 */
 
+/*
 // pure-green
 
 // WelcomePage
-@keyframes bcgMove {
-  from {
-    background-position: 0 0;
-  }
-  to {
-    background-position: -400px -400px;
-  }
-}
-
 @mixin welcomeBcg() {
   background-color: #ffffff;
   background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 1600 900'%3E%3Cdefs%3E%3ClinearGradient id='a' x1='0' x2='0' y1='1' y2='0' gradientTransform='rotate(0,0.5,0.5)'%3E%3Cstop offset='0' stop-color='%230FF'/%3E%3Cstop offset='1' stop-color='%23CF6'/%3E%3C/linearGradient%3E%3ClinearGradient id='b' x1='0' x2='0' y1='0' y2='1' gradientTransform='rotate(0,0.5,0.5)'%3E%3Cstop offset='0' stop-color='%23F00'/%3E%3Cstop offset='1' stop-color='%23FC0'/%3E%3C/linearGradient%3E%3C/defs%3E%3Cg fill='%23FFF' fill-opacity='0' stroke-miterlimit='10'%3E%3Cg stroke='url(%23a)' stroke-width='2'%3E%3Cpath transform='translate(-36.75 8.4) rotate(5.25 1409 581) scale(1.021)' d='M1409 581 1450.35 511 1490 581z'/%3E%3Ccircle stroke-width='4' transform='translate(-21 21) rotate(6.3 800 450) scale(1.011)' cx='500' cy='100' r='40'/%3E%3Cpath transform='translate(18.9 -63) rotate(63 401 736) scale(1.011)' d='M400.86 735.5h-83.73c0-23.12 18.74-41.87 41.87-41.87S400.86 712.38 400.86 735.5z'/%3E%3C/g%3E%3Cg stroke='url(%23b)' stroke-width='4'%3E%3Cpath transform='translate(126 -8.4) rotate(2.1 150 345) scale(0.979)' d='M149.8 345.2 118.4 389.8 149.8 434.4 181.2 389.8z'/%3E%3Crect stroke-width='8' transform='translate(-84 -52.5) rotate(75.6 1089 759)' x='1039' y='709' width='100' height='100'/%3E%3Cpath transform='translate(-126 42) rotate(12.6 1400 132)' d='M1426.8 132.4 1405.7 168.8 1363.7 168.8 1342.7 132.4 1363.7 96 1405.7 96z'/%3E%3C/g%3E%3C/g%3E%3C/svg%3E");
@@ -119,7 +127,9 @@ $detailBoxBcg: #CAF2FF;
 
 $titleContainerColor: #fff;
 $welcomeBtnColor: #fafafa;
-$cardBcgColor: #eaffd0;
+@mixin cardBcg() {
+  background-color: #eaffd0;
+}
 
 // MainHomePage
 @mixin headerBcg() {
@@ -139,12 +149,71 @@ $processBcg: #ddd;
 $processBarColor: #44BB74;
 $progressTimeColor: #666;
 // MusicDetail
-$MusicDetailBcg: #d2f6c5;
+@mixin musicDetailBcg() {
+  background-color: #d2f6c5;
+}
 
 // FaceShow
 // FaceCamera
-$cameraBoxColor: #d2f6c5;
+@mixin cameraBoxBcg() {
+  background-color: #d2f6c5;
+}
 $photoBcg: #fafafa;
 $uploadBtnBcg: #f6f6f6;
 // FaceShowDetail
-$detailBoxBcg: #d2f6c5;
+@mixin detailBoxBcg() {
+  background-color: #d2f6c5;
+}
+*/
+
+
+// while
+
+// WelcomePage
+@mixin welcomeBcg() {
+  background-color: #ffffff;
+  background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 1600 900'%3E%3Cdefs%3E%3ClinearGradient id='a' x1='0' x2='0' y1='1' y2='0' gradientTransform='rotate(0,0.5,0.5)'%3E%3Cstop offset='0' stop-color='%230FF'/%3E%3Cstop offset='1' stop-color='%23CF6'/%3E%3C/linearGradient%3E%3ClinearGradient id='b' x1='0' x2='0' y1='0' y2='1' gradientTransform='rotate(0,0.5,0.5)'%3E%3Cstop offset='0' stop-color='%23F00'/%3E%3Cstop offset='1' stop-color='%23FC0'/%3E%3C/linearGradient%3E%3C/defs%3E%3Cg fill='%23FFF' fill-opacity='0' stroke-miterlimit='10'%3E%3Cg stroke='url(%23a)' stroke-width='2'%3E%3Cpath transform='translate(-36.75 8.4) rotate(5.25 1409 581) scale(1.021)' d='M1409 581 1450.35 511 1490 581z'/%3E%3Ccircle stroke-width='4' transform='translate(-21 21) rotate(6.3 800 450) scale(1.011)' cx='500' cy='100' r='40'/%3E%3Cpath transform='translate(18.9 -63) rotate(63 401 736) scale(1.011)' d='M400.86 735.5h-83.73c0-23.12 18.74-41.87 41.87-41.87S400.86 712.38 400.86 735.5z'/%3E%3C/g%3E%3Cg stroke='url(%23b)' stroke-width='4'%3E%3Cpath transform='translate(126 -8.4) rotate(2.1 150 345) scale(0.979)' d='M149.8 345.2 118.4 389.8 149.8 434.4 181.2 389.8z'/%3E%3Crect stroke-width='8' transform='translate(-84 -52.5) rotate(75.6 1089 759)' x='1039' y='709' width='100' height='100'/%3E%3Cpath transform='translate(-126 42) rotate(12.6 1400 132)' d='M1426.8 132.4 1405.7 168.8 1363.7 168.8 1342.7 132.4 1363.7 96 1405.7 96z'/%3E%3C/g%3E%3C/g%3E%3C/svg%3E");
+  background-attachment: fixed;
+  background-size: cover;
+}
+
+$titleContainerColor: #fff;
+$welcomeBtnColor: #fafafa;
+@mixin cardBcg() {
+  background-color: #fafafa;
+}
+
+// MainHomePage
+@mixin headerBcg() {
+  background-color: #fff;
+}
+@mixin mainBcg() {
+  background-color: #fff;
+  border: 1px solid #E1E1E1;
+}
+$footerColor: #fff;
+// TheNavList
+$navBtnHoverColor: #eee;
+// TheMusicPlayer
+$processBcg: #eee;
+$processBarColor: #333;
+$progressTimeColor: #666;
+// MusicDetail
+@mixin musicDetailBcg() {
+  background-color: #fff;
+  border: 1px solid #E1E1E1;
+}
+
+// FaceShow
+// FaceCamera
+@mixin cameraBoxBcg() {
+  background-color: #fff;
+  border: 1px solid #E1E1E1;
+}
+$photoBcg: #fafafa;
+$uploadBtnBcg: #fff;
+// FaceShowDetail
+@mixin detailBoxBcg() {
+  background-color: #fff;
+  border: 1px solid #E1E1E1;
+}
