--- a/src/pages/MusicPage/MusicDetailPage.scss
+++ b/src/pages/MusicPage/MusicDetailPage.scss
@@ -3,12 +3,12 @@
 
 .music-detail-main {
   @include flexBoxRow();
+  @include musicDetailBcg();
   position: relative;
   justify-content: space-between;
   align-items: flex-start;
   width: 760px;
   height: 420px;
-  background: $MusicDetailBcg;
   border-radius: 10px;
   padding: 20px;
   margin: auto;
