背景色改为灰色

--- a/src/components/common/_colors.scss
+++ b/src/components/common/_colors.scss
@@ -188,7 +188,7 @@ $welcomeBtnColor: #fafafa;
   background-color: #fff;
 }
 @mixin mainBcg() {
-  background-color: #fff;
+  background-color: #F5F5F5;
   border: 1px solid #E1E1E1;
 }
 $footerColor: #fff;
