--- a/src/components/Music/MusicLyrics.scss
+++ b/src/components/Music/MusicLyrics.scss
@@ -1,4 +1,4 @@
-@import '../../myStyle.scss';
+@import "../../myStyle.scss";
 @import "../common/colors";
 
 .lyricsMain {
@@ -18,7 +18,6 @@
         margin-bottom: 5px;
       }
     }
-
   }
 
   .mainLyrics {
