--- a/src/pages/MusicPage/MusicDetailPage.scss
+++ b/src/pages/MusicPage/MusicDetailPage.scss
@@ -1,5 +1,5 @@
 @import "../../components/common/colors";
-@import "../../myStyle.scss";
+@import "../../components/common/myStyle.scss";
 
 .music-detail-main {
   @include flexBoxRow();
